style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.flex {
    display: flex;
    flex-direction: column;
}

body {
    min-height: 100vh;
    background-color: #F6F1E9;
    color: #164B60;
    /* justify-content: center; */
    align-content: center;
    /* padding: 20px 30px; */
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    flex-wrap: wrap;
}

.main {
    width: 95%;
    padding: 20px 30px;
}

.main-heading {
    margin-bottom: 40px;
    font-weight: 800;
    text-align: center;
}

.tool-description {
    font-size: 14px;
}

.color-tool-wrapper {
    flex-direction: column;
    margin: 20px 0px;
    gap: 5px; /* adds gap to all flex-child items within the parent */
}

.label-hex-input {
    margin-bottom: 0.25rem;
    font-size: 1.125rem;
}

input[type="text"] {
    height: 40px;
    border-radius: 8px;
    padding: 5px;
    font-size: 18px;
    font-weight: 600;
}

#input--range-slider {
    width: 40%;
}

.toggle {
    display: flex;
    align-items: center;
    margin: 0.7rem 0;
}

.toggle-text,
#slider-label {
    font-size: 1.25rem;
}

.toggle-btn {
    display: flex;
    align-items: center;
    height: 35px;
    width: 65px;
    background-color: gray;
    border-radius: 30px;
    padding: 5px;
    margin: 0 0.5rem;
}

.inner-circle {
    width: 27px;
    height: 27px;
    background-color: white;
    border-radius: 50%;
    transition: all 250ms;
}

.toggle-btn.toggled > .inner-circle {
    transform: translateX(29px);
    background-color: #333;
}

.unselected-toggle-text {
    opacity: 0.45;
}

.color-box-label {
    margin-top: 0.75rem;
}

.color-box {
    height: 85px;
    width: 100%;
    border: 2px solid black;
}

.color-box--altered {
    display: flex;
}

.altered-color-label:hover,
.color-box--altered:hover {
    cursor: pointer;
}

.hex-copied-notification {
    display: none;
    padding: 4px;
    margin: auto auto;
    color: black;
    background-color: #F6F1E9;
}

.hex-copied-notification.show {
    display: inline-block;
}

footer {
    position: absolute;
    bottom: 0px;
    width: 100%;
    text-align: center;
}

footer p {
    padding: 0.5rem 0;
}


@media screen and (min-width: 500px) {

    body {
        justify-content: center;
    }

    .main {
        max-width: 500px;
    }

    .main-heading {
        margin-bottom: 10px;
    }

    footer {
        text-align: right;
        margin-right: 1rem;
    }

    footer p {
        margin-right: 1rem;
    }
}

